--- a/src/app/pages/tabs/account/account.page.html
+++ b/src/app/pages/tabs/account/account.page.html
@@ -12,7 +12,7 @@
     <ion-card-header>
       <ion-card-title >Name</ion-card-title>
       <ion-card-content class="ion-text-right">
-        John Doe
+        Landlord
       </ion-card-content>
     </ion-card-header>
   </ion-card>
@@ -21,14 +21,16 @@
     <ion-card-header>
       <ion-card-title>Email</ion-card-title>
       <ion-card-content class="ion-text-right">
+        landlord&commat;gmail.com
       </ion-card-content>
-    </ion-card-header>
+      </ion-card-header>
   </ion-card>
 
   <ion-card>
     <ion-card-header>
       <ion-card-title>Gender</ion-card-title>
       <ion-card-content class="ion-text-right">
+        Not set
       </ion-card-content>
     </ion-card-header>
   </ion-card>
@@ -36,7 +38,7 @@
   <ion-card>
     <ion-card-header>
       <ion-card-title>Birthday</ion-card-title>
-      <ion-card-content class="ion-text-right">
+      <ion-card-content class="ion-text-right">Not set
       </ion-card-content>
     </ion-card-header>
   </ion-card>
@@ -45,14 +47,16 @@
     <ion-card-header>
       <ion-card-title>Phone number</ion-card-title>
       <ion-card-content class="ion-text-right">
+        Not set
       </ion-card-content>
     </ion-card-header>
   </ion-card>
 </div>
 
-  <ion-button fill="outline" expand="block">
+  <ion-button fill="outline" expand="block" default-href="login">
     <ion-icon name="exit-outline" color="white" slot="start"></ion-icon>
-    Log Out</ion-button>
+    <a href="login" id="a-button">Log Out</a>
+  </ion-button>
 
 
   </div>
