--- a/src/app/pages/tabs/home/home.page.html
+++ b/src/app/pages/tabs/home/home.page.html
@@ -86,7 +86,7 @@
   <!-- to pay -->
   <div class="topay">
     <ion-button [routerLink]="('/topay')" class="topayButton">
-    <ion-icon slot="start" name="alert-circle"></ion-icon>
+    <ion-icon slot="start" name="alert-circle" color=></ion-icon>
     <div class="topayTitle">To Pay</div>
   </ion-button> 
   </div>
