--- a/src/app/pages/tabs/home/topay/topay.page.html
+++ b/src/app/pages/tabs/home/topay/topay.page.html
@@ -38,7 +38,7 @@
   <!-- <input class="rounded-input" placeholder="Input Date" [(ngModel)]="paymentDate"> -->
   
 <br/>
-  <ion-datetime [(ngModel)]="paymentDate" type="date-time" showClearButton="true" showDefaultButtons="true" displayFormat="">
+  <ion-datetime [(ngModel)]="paymentDate" type="date-time" showClearButton="true" showDefaultButtons="true">
   </ion-datetime>
   
   
