--- a/src/app/pages/tabs/account/account.page.scss
+++ b/src/app/pages/tabs/account/account.page.scss
@@ -8,7 +8,7 @@
 }
 
 .title {
-    display: flex;
+    display: block;
     justify-content: center;
     margin-top: 4rem;
     margin-bottom: 2rem;
@@ -54,6 +54,7 @@
 
 ion-card-header {
   width: 100%;
+  display: block;
 }
 
 ion-button {
@@ -82,13 +83,15 @@ ion-card {
 
 ion-card-title {
   font-size: 1rem;
-  width: 50%;
+  width: 40%;
   display: inline-block;
 }
 
 .ion-text-right {
+  width: 60%;
+  font-size: 0.6rem;
   display: inline-block;
-  width: 50%;
+
 }
 
 #name {
@@ -103,6 +106,10 @@ ion-card-title {
     padding: 0;
     font-size: 0.7rem;
     line-height: 1;
+}
+
+a {
+  text-decoration: none;
 }
   
   @media only screen and (min-width: 968px) {
