--- a/src/app/pages/tabs/home/home.page.scss
+++ b/src/app/pages/tabs/home/home.page.scss
@@ -1,5 +1,6 @@
 ion-content{
   overflow-y: auto;
+  background: url('../../../../assets/img/bg/Vectorlogin.svg');
  }
 
 ion-card {
@@ -22,15 +23,20 @@ ion-card {
     font-size: 16px;
     height: 50px; 
   }
+  ion-icon {
+    margin: auto;
+    color: #9f597a;
+  }
   
 .seeMore {  
   width: 30%;
-  font-size: 15px;
+  font-size: 25px;
+  font-weight: 600;
   margin: 0 auto;
   margin-bottom: 50px;
   display: block;
   --background: #cfa4c1;
-  color: black;
+  color: rgb(255, 255, 255);
 }
 
 .rules{
@@ -49,13 +55,16 @@ ion-card {
   .topayButton, .maintenanceButton {
     width: 100%;
     height: 200px;
-    --border-radius: 5px;
+    border-radius: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
     color: black;
-    --background: #F0edFF;
+    border-radius: 1rem;
+    --background: rgba(240, 237, 255, 0.63);
+    box-shadow: 0px 4px 2px 0px rgba(0, 0, 0, 0.25);
+
   }
   
   .maintenanceTitle, .topayTitle{
@@ -77,10 +86,14 @@ ion-card {
 
 
 
+
   @media (max-width: 576px) {
     ion-card {
       width: 90%;
       margin: 15px auto;
+    }
+    ion-icon {
+      color: #9f597a;
     }
 
 
