--- a/src/app/pages/tabs/dashboard/dashboard.page.html
+++ b/src/app/pages/tabs/dashboard/dashboard.page.html
@@ -4,11 +4,9 @@
 <div class="body">
   <ion-card id="amount">
     <section class="text-income">
-      <ion-card-header>Income</ion-card-header>
-      <ion-label>text</ion-label>
+      <ion-card-header>Income {{ totalPendingRequests }}</ion-card-header>
+
     </section>
-    <ion-card-content class="pie" style="--p:68;--b:17px;--c:#891E89;">
-    </ion-card-content>
   </ion-card>
 
   <ion-card>
