--- a/src/app/pages/tabs/dashboard/dashboard.page.html
+++ b/src/app/pages/tabs/dashboard/dashboard.page.html
@@ -4,15 +4,19 @@
 <div class="body">
   <ion-card id="amount">
     <section class="text-income">
-      <ion-card-header>Income {{ totalPendingRequests }}</ion-card-header>
+      <ion-card-header>Income </ion-card-header>
+      <ion-card-header ></ion-card-header>
 
     </section>
   </ion-card>
 
   <ion-card>
-    <ion-card-header class="text-income">Resolved Requests</ion-card-header>
-    <ion-card-content class="pie" style="--p:60;--b:17px;--c:#891E89;">
-    </ion-card-content>
+    <ion-card-header class="text-income">Pending Requests</ion-card-header>
+    <ion-card-header class="number">
+      {{ pendingRequestsCount$ | async }}
+    </ion-card-header>
+    <!-- <ion-card-content class="pie" style="--p:60;--b:17px;--c:#891E89;">
+    </ion-card-content> -->
     
   </ion-card>
 
