--- a/src/app/pages/tabs/dashboard/dashboard.page.scss
+++ b/src/app/pages/tabs/dashboard/dashboard.page.scss
@@ -1,5 +1,8 @@
 .full{
-  overflow-y:auto ;
+  overflow-y:auto;
+  background: url('../../../../assets/img/bg/Vectorother.svg');
+  background-size: cover;
+  height: 100%;
 }
 
 .header {
