--- a/src/app/pages/tabs/home/home.page.html
+++ b/src/app/pages/tabs/home/home.page.html
@@ -1,12 +1,13 @@
 <ion-content [fullscreen]="true">
-  
+  <ion-text class="header">HELLO</ion-text>
+  <ion-text class="_name"></ion-text>
   <ion-card>
     <ion-card-header>
       <ion-card-title>Rules and Regulations</ion-card-title>
     </ion-card-header>
   
     <ion-card-content>
-      Here's a small text description for the card content. Nothing more, nothing less.
+      List of Rules and Regulations of the Apartment
     </ion-card-content>
 
     <ion-button class= "seeMore" expand="block" (click)="setOpen(true)" >See More</ion-button>
