--- a/src/app/pages/tabs/dashboard/dashboard.page.html
+++ b/src/app/pages/tabs/dashboard/dashboard.page.html
@@ -4,9 +4,10 @@
 <div class="body">
   <ion-card id="amount">
     <section class="text-income">
-      <ion-card-header>Income</ion-card-header>
-      <ion-card-header ></ion-card-header>
-
+      <ion-card-header class="card-title">Income</ion-card-header>
+      <ion-card-header class="number">
+        {{ totalIncome$ | async }}
+      </ion-card-header>
     </section>
   </ion-card>
 
