--- a/src/app/pages/tabs/home/home.page.html
+++ b/src/app/pages/tabs/home/home.page.html
@@ -88,7 +88,7 @@
   <div class="topay">
     <ion-button [routerLink]="('/topay')" class="topayButton">
     <ion-icon slot="start" name="alert-circle" color=></ion-icon>
-    <div class="topayTitle">To Pay</div>
+    <div class="topayTitle">Payment</div>
   </ion-button> 
   </div>
 
